force-app/main/default/objects/pymtTest__Payment_Allocation__c/fields/pymtTest__Allocation_Date__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Allocation_Date__c</fullName>
    <label>Allocation Date</label>
    <type>Date</type>
</CustomField>