force-app/main/default/objects/pymtTest__Payment_Allocation__c/fields/pymtTest__Amount__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Amount__c</fullName>
    <description>Amount allocated from the transaction to this invoice</description>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>