force-app/main/default/objects/pymtTest__Payment_Allocation__c/fields/pymtTest__Invoice__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The invoice this payment is allocated to</description>
    <label>Invoice</label>
    <referenceTo>pymtTest__Invoice__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>