force-app/main/default/objects/pymtTest__Payment_Allocation__c/fields/pymtTest__Transaction__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Transaction__c</fullName>
    <description>The transaction this allocation belongs to</description>
    <label>Transaction</label>
    <referenceTo>pymtTest__Transaction__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>